--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,11 @@
     <link rel="icon" href="./icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Portfolio | Vaibhav Gupta"
-    />
+    <meta name="description" content="Portfolio | Vaibhav Gupta" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Portfolio | Vaibhav Gupta</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"/>
+    <div id="root"></div>
   </body>
 </html>
